; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/cmdutils/vfdcmd/extr_vfdcmd.c_SystemError.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/cmdutils/vfdcmd/extr_vfdcmd.c_SystemError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SystemError.msg = internal global [256 x i8] zeroinitializer, align 16
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_IGNORE_INSERTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Unknown system error %lu (0x%08x)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @SystemError(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %4 = load i32, i32* @FORMAT_MESSAGE_IGNORE_INSERTS, align 4
  %5 = or i32 %3, %4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @FormatMessage(i32 %5, i32* null, i32 %6, i32 0, i8* getelementptr inbounds ([256 x i8], [256 x i8]* @SystemError.msg, i64 0, i64 0), i32 256, i32* null)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @sprintf(i8* getelementptr inbounds ([256 x i8], [256 x i8]* @SystemError.msg, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  ret i8* getelementptr inbounds ([256 x i8], [256 x i8]* @SystemError.msg, i64 0, i64 0)
}

declare dso_local i32 @FormatMessage(i32, i32*, i32, i32, i8*, i32, i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
